--- a/net6/appdb.csproj
+++ b/net6/appdb.csproj
@@ -1,11 +1,22 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+
+    <PackageName>appdb</PackageName>
+    <PackageId>appdb</PackageId>
+    <AssemblyName>appdb</AssemblyName>
+    <Version>1.3.0</Version>
+    <Authors>Alexander Automatl</Authors>
+    <Company>Tomatl Inc</Company>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Reference Include="Interop.IWshRuntimeLibrary"/>
+  </ItemGroup>
 
   <ItemGroup>
     <Compile Include="..\src\Model\Model.cs" Link="Model\Model.cs" />
@@ -13,17 +24,11 @@
     <Compile Include="..\src\Program.cs" Link="Program.cs" />
   </ItemGroup>
 
-  <ItemGroup>
-    <COMReference Include="IWshRuntimeLibrary">
-      <WrapperTool>tlbimp</WrapperTool>
-      <VersionMinor>0</VersionMinor>
-      <VersionMajor>1</VersionMajor>
-      <Guid>f935dc20-1cf0-11d0-adb9-00c04fd58a0b</Guid>
-      <Lcid>0</Lcid>
-      <Isolated>false</Isolated>
-      <EmbedInteropTypes>False</EmbedInteropTypes>
-    </COMReference>
-  </ItemGroup>
+  <Target Name="PackChoco" DependsOnTargets="Publish">
+    <Message Importance="High" Text="Packing $(PublishDir), generating nuspec:" />
+    <Exec Command="python3 generate-choco-spec.py $(PublishDir)" />
+    <Exec Command="choco pack appdb.choco.nuspec" />
+  </Target>
 
   <ItemGroup>
     <PackageReference Include="CLAP-DotNetCore" Version="4.6.4" />
