--- a/.gitea/workflows/build-net6-choco.yaml
+++ b/.gitea/workflows/build-net6-choco.yaml
@@ -11,10 +11,10 @@ jobs:
         uses: actions/checkout@v4
       - name: build choco
         run: |
-          dotnet publish -c Release -r win-x64 -t:PackChoco
+          pushd net6 && dotnet publish -c Release -r win-x64 -t:PackChoco && popd
       - name: rename nupkg
         run: |
-          mv AppDb/net6/appdb.portable*.nupkg appdb.portable.nupkg
+          mv net6/appdb.portable*.nupkg appdb.portable.nupkg
       - name: upload choco
         run: |
           choco push appdb.portable.nupkg --source https://${{ secrets.CI_USER }}:${{ secrets.CI_TOKEN }}@${{ env.AU_GITEA_HOST }}/api/packages/audist/nuget/index.json --api-key ${{ secrets.CI_TOKEN }}
